--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,7 @@
 #
 # Configure Using Gemfile
 # gem 'pg'
-
+#
 default: &default
   adapter: postgresql
   encoding: unicode
@@ -24,12 +24,10 @@ default: &default
   password: password
   host: localhost
 
-development:
-  adapter: postgresql
-  host: localhost
-  username: user
-  database: app-dev
 
+development:
+  <<: *default
+  database: gogo_project_development
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
@@ -83,7 +81,10 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
+
 production:
-  <<: *default
-  database: gogo_project_production
-  password: <%= ENV['GOGO_PROJECT_DATABASE_PASSWORD'] %>
+  development:
+  adapter: postgresql
+  host: localhost
+  username: user
+  database: app-dev
